fix: title bar alignment on macOS (#722)

--- a/src/less/components/chrome-mac.less
+++ b/src/less/components/chrome-mac.less
@@ -14,4 +14,8 @@
       user-select: none;
     }
   }
+
+  .big_sur_or_later {
+    height: 30px !important;
+  }
 }
